--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "deploy": "node scripts/deploy-commands.js",
-    "start:pm2": "pm2 start ecosystem.config.js"
+    "start:pm2": "pm2 start ecosystem.config.js",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "keywords": [
     "discord",
